# realm

./: .code-workspace  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  realm.json  ruff.toml
.github/actions/common/: action.yml
.github/workflows/: build.yml  docs.yml  e2e-tests.yml  e2e.yml  main.yml  publish.yml
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: .pages  cli.md  commands.md  examples.md  index.md  license.md  motivation.md
docs/ext/: click.py
docs/site/: 404.html  index.html
docs/site/commands/: index.html
docs/site/search/: search_index.json
e2e/realm-e2e/: .gitignore  README.md  pyproject.toml
e2e/realm-e2e/fixtures/packages_repo/: realm.json
e2e/realm-e2e/tests/: common.py  conftest.py  test_execution_commands.py  test_init_command.py  test_project_basic_filters.py  test_project_build.py  test_project_since_filter.py  test_version.py
e2e/realm-e2e/tests/containers/: pypiserver.py
e2e/realm-e2e/tests/test_services/: pypiserver.py
src/realm/: version.py
src/realm/cli/: application.py  base.py  formatter.py  group.py  realm_click_types.py  realm_command.py
src/realm/cli/commands/: init.py  install.py  ls.py  run.py  task.py
src/realm/cli/core/: base_command.py  group.py
src/realm/entities/: __init__.py  config.py  context.py  project.py
src/realm/utils/: __init__.py  child_process.py  filters.py
src/realm/utils/filters/: ignore.py  match.py  scope.py  since.py
tests/: common.py  test_multiple_packages_with_tasks.py  test_realm.py
tests/scenarios/multiple_packages_with_tasks/: realm.json
