[tool.poetry]
name = "realm"
version = "0.1.0a1"
description = "A tool for managing python poetry projects"
authors = ["Or Levi <orlevi128@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["monorepo", "realm"]

homepage = "https://github.com/orlevii/realm"
repository = "https://github.com/orlevii/realm"
documentation = "https://github.com/orlevii/realm"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = "^3.6"
click = "7.*"
toml = "^0.10.2"
poethepoet = { version = "^0.9.0", optional = true }
colorama = "^0.4.4"

[tool.poetry.extras]
tasks = ['poethepoet']

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
coverage = "^5.3"

[tool.poetry.scripts]
realm = 'realm.cli.application:cli'

[tool.poe.tasks]
test.shell = 'coverage run --source ./src -m unittest discover -s tests -v -p "test_*.py"'
lint.shell = """
poetry run flake8 . --count --ignore F401,F841,W504 --show-source && \
poetry run flake8 . --count --exit-zero --max-complexity=10
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
