[tool.poetry]
name = "realm"
version = "0.3.0.dev1"
description = "A tool for managing python poetry projects"
authors = ["Or Levi <orlevi128@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["monorepo", "realm", "poetry"]

homepage = "https://github.com/orlevii/realm"
repository = "https://github.com/orlevii/realm"
documentation = "https://github.com/orlevii/realm"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
toml = "^0.10.2"
poethepoet = { version = "<1.0.0", optional = true }
colorama = "^0.4.6"

[tool.poetry.extras]
tasks = ['poethepoet']

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.4.0"

[tool.poetry.scripts]
realm = 'realm.cli.application:cli'

[tool.poe.tasks]
test.shell = 'coverage run --source ./src -m unittest discover -s tests -v -p "test_*.py"'
lint.shell = """
flake8 . --count --ignore F401,F841,W504 --show-source && \
flake8 . --count --exit-zero --max-complexity=10
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
