[tool.poetry]
name = "realm-docs"
version = "0.1.0"
description = "Docs for realm"
authors = ["Or Levi <orlevi128@gmail.com>"]
license = "MIT"

packages = [
    { include = "ext" },
]

[tool.poetry.dependencies]
python = "~3.10"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-click = "^0.8.1"
realm = "^0.4.0"

[tool.poe.tasks]
build = "mkdocs build"
serve = "mkdocs serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
