[tool.poetry]
name = "realm-e2e"
version = "0.1.0"
description = "End-to-end tests for realm"
authors = ["Or Levi <orlevi128@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
realm = { path = "../../packages/realm", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.1"

[tool.poe.tasks]
test.shell = 'pytest --cov=../../packages/realm/src --cov=tests tests -v'
lint.shell = "ruff ."
format = [
    { shell = "ruff format ." }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
