[tool.poetry]
name = "realm-e2e"
version = "0.1.0"
description = "End-to-end tests for realm"
authors = ["Or Levi <orlevi128@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
realm = { path = "../../packages/realm", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pypiserver = { version = "^2.0.1", extras = ["passlib"], python = "<3.12" }

[tool.poe.tasks]
test.shell = 'pytest --cov=../../packages/realm/src --cov=tests tests -v'
lint.shell = "ruff check ."
format = [
    { shell = "ruff format ." }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
